# LITE

./: .gitattributes  .gitignore  CMakeLists.txt  DISTRIBUTION.org  LITE_LISP.tex  NOTICE  README.org
docs/: .gitignore  Doxyfile  footer.html  style.css
editor/: lite_lisp_ts_mode.el
gfx/: CMakeLists.txt  README.org  api.h  gui.h  new_backend_template.c
gfx/gl/: CMakeLists.txt  README.org
gfx/gl/libs/glad/include/glad/: glad.h
gfx/gl/libs/glad/src/: glad.c
gfx/gl/shaders/: frag.glsl  frag_simple.glsl  vert.glsl  vert_simple.glsl
gfx/gl/src/: main.c  shade.c  shade.h
gfx/sdl2/: CMakeLists.txt  FindSDL2.cmake  FindSDL2_ttf.cmake  README.org  sdl.c
lisp/: c-hl.lt  dbg.lt  lite-lisp-hl.lt  rule110.lt  std.lt  un-hl.lt
lisp/std/: advice.lt  ascii.lt  basics.lt  binds.lt  lists.lt  maths.lt  structures.lt  utf16.lt  utf32.lt  utf8.lt
src/: api.c  buffer.c  buffer.h  builtins.c  builtins.h  environment.c  environment.h  error.c  error.h  evaluation.c  evaluation.h  file_io.c  file_io.h  gfx.c  gfx.h  keystrings.h  main.c  parser.c  parser.h  repl.c  repl.h  rope.c  rope.h  tree_sitter.c  tree_sitter.h  types.c  types.h  utility.c  utility.h
tst/: LITETestRunner.pas  README.org  test.pas
tst/basic_tests/: cons.lt  hello.lt  logic.lt  math.lt
tst/std_tests/: folding.lt  let.lt  macro.lt
